<resources>
    <string name="app_name">Aliante Badge</string>
    <string name="image_description_splash">logo dello splash screen</string>
    <string name="nav_profile">Profilo</string>
    <string name="nav_favourite">Preferiti</string>
    <string name="nav_change_password">Cambia password</string>
    <string name="nav_edit_profile">Modifica profilo</string>
    <string name="nav_download">Scaricati</string>
    <string name="nav_settings">Impostazioni</string>
    <string name="text_login">Accedi</string>
    <string name="text_register">Registrati</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="link_forget_password"><u>Password dimenticata?</u></string>
    <string name="text_not_register">Non hai un account?</string>
    <string name="link_register"><u>Registrati</u></string>
    <string name="text_or">oppure</string>
    <string name="link_login_ghost"><u>Accedi come ospite</u></string>
    <string name="helper_input_password">Inserisci una password che contenga <b>almeno 8 caratteri, un numero e un carattere speciale.</b></string>
    <string name="hint_repeat_password">Conferma password</string>
    <string name="image_description_back_arrow">Indietro</string>
    <string name="image_description_logo_header">Banner del logo</string>
    <string name="insert_email_error">Inserisci una email</string>
    <string name="email_format_error">Formato email non valido</string>
    <string name="insert_password_error">Inserisci una password</string>
    <string name="password_not_safe_error">La password non incontra i requisiti di sicurezza</string>
    <string name="insert_repeat_password_error">Inserisci di nuovo la passoword</string>
    <string name="non_equivalent_passwords">Le password non coincidono</string>
    <string name="wrong_password_error">Password errata</string>
    <string name="perfect">PERFETTO!</string>
    <string name="successfully_registered">Sei stato registrato/a!</string>
    <string name="successfully_sent_reset_password">Email di reset password inviata!\nSe non la trovi tra la mail in arrivo controlla nello spam</string>
    <string name="pay_attention">ATTENZIONE!</string>
    <string name="an_error_occurred">C\'è stato un errore!</string>
    <string name="error_sending_reset_password">Errore, email non inviata!</string>
    <string name="description_image_face">Immagine del feedback</string>
    <string name="text_title_feedback">Sei dei nostri!</string>
    <string name="text_feedback">Grazie per aver scaricato l\'app</string>
    <string name="text_goto_tutorial">vai al tutorial</string>
    <string name="image_description_tutorial">Immagine tutorial</string>
    <string name="viewPager_description">Scorri per visualizzare il tutorial</string>
    <string name="text_skip">Salta</string>
    <string name="text_next">Avanti</string>
    <string name="text_start">Inizio</string>
    <string name="text_start_female">Inizia</string>
    <string name="text_continue">Continua</string>
    <string name="text_title_tutorial">Titolo</string>
    <string name="text_title_search_itinerary">Cerca l\'itinerario più adatto a te</string>
    <string name="text_title_augmented_reality">Realtà Aumentata</string>
    <string name="text_title_qr_code">QR-Code</string>
    <string name="text_title_geolocalization">Geolocalizzati</string>
    <string name="text_description_tutorial">Descrizione</string>
    <string name="text_description_search_itinerary">Lasciati ispirare da numerosi itinerari creati da <b>guide turistiche</b> ed <b>esperti d’arte</b>. Consulta i servizi offerti e le modalità di <b>intrattenimento</b>. Cerca subito l’itinerario che preferisci.</string>
    <string name="text_description_augmented_reality">Inquadrando, con il tuo smartphone, lo <b>spazio</b> che ti <b>circonda</b>, avrai la possibilità di visualizzare <b>più informazioni</b> rispetto a quelle disponibili nel posto in cui ti trovi.</string>
    <string name="text_description_qr_code">Lungo il tuo tragitto potrai trovare questa icona. <b>Inquadrala</b> con la <b>fotocamera</b> e scopri di più rispetto alla tappa a cui fa riferimento.</string>
    <string name="text_description_geolocalization">Attiva la geolocalizzazione per vedere gli <b>itinerari vicini a te</b>.</string>
    <string name="item_search">Ricerca</string>
    <string name="item_edit">Modifica</string>
    <string name="bottom_bar_text_home">Home</string>
    <string name="bottom_bar_text_favourite">Preferiti</string>
    <string name="bottom_bar_text_profile">Profilo</string>
    <string name="guest">Ospite</string>
    <string name="hamburger_menu_text_podium">Classifica</string>
    <string name="hamburger_menu_text_download">Scaricati</string>
    <string name="hamburger_menu_text_tutorial">Tutorial</string>
    <string name="hamburger_menu_text_settings">Impostazioni</string>
    <string name="hamburger_menu_text_about_us">Chi siamo</string>
    <string name="hamburger_menu_text_sign_out">Esci</string>
    <string name="hamburger_menu_text_sign_in">Accedi</string>
    <string name="text_forgot_password">Recupero Password</string>
    <string name="text_guide_forgot_password">Inserisci la tua email per effettuare il\n recupero password</string>
    <string name="text_send">invia</string>
    <string name="title_Page_Profile">Profilo</string>
    <string name="text_description_profile_icon">Immagine del profilo</string>
    <string name="title_information_section">Informazioni sul profilo</string>
    <string name="label_name">Nome</string>
    <string name="label_username">Nome utente</string>
    <string name="label_email">Email</string>
    <string name="label_changepassword">Cambia password</string>
    <string name="label_score">Score</string>
    <string name="label_surname">Cognome</string>
    <string name="label_item_badge">I miei badge</string>
    <string name="text_change_profile">Modifica</string>
    <string name="text_save_changes">Salva</string>
    <string name="title_edit_profile">Modifica Profilo</string>
    <string name="image_description_go_to_badge">vai alla sezione dei badge</string>
    <string name="image_description_go_to_forgot_pass">vai alla sezione per cambiare password</string>
    <string name="text_change_image_profile">Cambia le informazioni del profilo</string>
    <string name="request_camera_dialog">Abbiamo bisogno di accedere alla fotocamera per poter usufruire di alcune nostre funzionalità.</string>
    <string name="request_gallery_dialog">Abbiamo bisogno di accedere alla galleria per poter usufruire di alcune nostre funzionalità.</string>
    <string name="image_description_delete">cancella immagina profilo</string>
    <string name="text_gallery">Galleria</string>
    <string name="text_take_photos">Scatta\n Foto</string>
    <string name="text_title_ops">Ops!</string>
    <string name="text_profile_ghost">Non fai ancora parte della nostra Community</string>
    <string name="link_accedi"><u>Accedi</u></string>
    <string name="description_no_download_itinerary">Non hai ancora scaricato itinerari. Prova a fare tap sull’icona dedicata</string>
    <string name="data_successfully_changed">I dati sono stati aggiornati con successo!</string>
    <string name="title_select_lang">Lingua</string>
    <string name="lang_ita">Italiano</string>
    <string name="lang_ing">Inglese</string>
    <string-array name="options_array">
        <item>Lingua</item>

    </string-array>
    <string name="nav_language"> Lingua </string>
    <string name="text_changepassword">Modifica Password</string>
    <string name="hint_old_password">Password attuale </string>
    <string name="hint_new_password">Nuova Password</string>
    <string name="hint_confirm_new_password">Conferma la nuova password</string>
    <string name="text_changepassword_button">Modifica</string>
    <string name="password_successfully_changed">Password correttamente aggiornata!</string>
    <string name="error_changing_password">Errore interno, password non aggiornata!</string>
    <string name="text_card_itinerary_duration">Durata: </string>
    <string name="text_card_itinerary_from_you">da te</string>
    <string name="image_description_itinerary">Immagine dell\'itinerario</string>
    <string name="image_description_km_from_user">kilometri da te</string>
    <string name="image_description_favourite">Aggiungi ai preferiti</string>
    <string name="title_podium">Classifica generale </string>
    <string name="request_position_dialog">Abbiamo bisogno di accedere alla tua posizione per migliorare il nostro servizio.</string>
    <string name="request_position_dialog2">Abbiamo bisogno di accedere alla tua posizione per migliorare il nostro servizio. Attiva il GPS</string>
    <string name="text_title_no_internet">Sei offline</string>
    <string name="text_subtitle_no_internet">Controlla la tua connessione</string>
    <string name="connection_lost_warning_message">Ops! Abbiamo perso la tua connessione</string>
    <string name="description_no_favorite_itinerary">Non hai ancora aggiunto itinerari ai tuoi preferiti. Prova a fare tap sull’icona del cuore degli itinerari</string>
    <string name="text_title_itinerary">Itinerari</string>
    <string name="text_subtitle_near_itinerary">Vicini a te</string>
    <string name="text_subtitle_racomanded_itinerary">Consigliati</string>
    <string name="text_banner_home_hello">Ciao </string>
    <string name="text_banner_home_username"> Maria</string>
    <string name="text_banner_home_you_are_in">Ti trovi a</string>
    <string name="text_banner_home_location">Bari</string>
    <string name="text_view_itinerary_nearest">Per visualizzare gli itinerari vicini a te attiva la geolocalizzazione</string>
    <string name="text_warning_location_lost">La geolocalizzazione è disattiva, ecco gli itinerari per l\' ultima posizione rilevata</string>
    <string name="link_see_all_itinerary"><u>Vedi tutti</u></string>
    <string name="text_title_descrioption_itinerary">Descrizione</string>
    <string name="text_title_entertainment_itinerary">Intrattenimento</string>
    <string name="text_quiz">Quiz</string>
    <string name="text_puzzle">Puzzle</string>
    <string name="text_find_difference">Trova 3 differenze</string>
    <string name="text_augmented_reality">Realtà\n aumentata</string>
    <string name="text_title_step_itinerary">Tappe itinerario</string>
    <string name="text_title_reviews">Recensioni</string>
    <string name="text_vote">Voto</string>
    <string name="text_average">in media</string>
    <string name="text_button_write_review">Valuta l\'itinerario</string>
    <string name="text_no_reviews_yet">Ancora nessuna recensione</string>
    <string name="description_image_itinerary_carousel">immagine dell\'itinerario</string>
    <string name="description_image_download_itinerary">scarica l\'itinerario</string>
    <string name="description_image_play_itinerary">Inizia itinerario</string>
    <string name="search_placeholder">Nome itinerario</string>
    <string name="ok">OK</string>
    <string name="share">Condividi</string>
    <string name="share_text">Ti consiglio di dare uno sguardo all\'itinerario </string>
    <string name="point_of_interest_not_found">Il punto di interesse inquadrato non è presente nell\'itinerario corrente</string>
    <string name="text_title_section_curiosity">Curiosità</string>
    <string name="text_title_section_audioguide">Audioguida</string>
    <string name="link_leave_reviews"><u>Valuta l\'itinerario</u></string>
    <string name="text_steps">Tappa</string>
    <string name="text_of">di</string>
    <string name="description_image_step">Immagine tappa</string>
    <string name="description_image_play_audioguide">avvia audioguida</string>
    <string name="description_flutter_play_minigames">Vai alla sezione dei minigiochi</string>
    <string name="enable_admin">Enable Admin</string>
    <string name="admin">Admin</string>
</resources>