<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_Top_Linear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageViewBackArrowForgotPassword"
                android:layout_width="@dimen/width_backImg"
                android:layout_height="@dimen/height_backImg"
                android:layout_marginEnd="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_round_arrow_back_24"
                android:contentDescription="@string/image_description_back_arrow"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/textViewForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/text_forgot_password"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_TitlePw_Recovery"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_Top1_text"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/text_guide_forgot_password"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutEmailForgotPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/textInputlayout_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_Top1_login"
            android:hint="@string/hint_email"
            app:boxStrokeColor="@color/light_grey"
            app:errorEnabled="true"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextEmailForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonResetPassword"
            android:layout_width="@dimen/width_Button"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_send"
            app:cornerRadius="10dp"
            android:textSize="@dimen/textButton" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
