<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".home.menu_items.profile.ChangePasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/hint_old_password"
            android:paddingTop="10dp"
            app:boxBackgroundColor="@color/white_input"
            app:boxStrokeColor="@color/dark_blue"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutNewPassword"
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:layout_marginTop="12dp"
            android:hint="@string/hint_new_password"
            app:boxBackgroundColor="@color/white_input"
            app:boxStrokeColor="@color/dark_blue"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:helperText="@string/helper_input_password"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/hint_confirm_new_password"
            app:boxBackgroundColor="@color/white_input"
            app:boxStrokeColor="@color/dark_blue"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextConfirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:inputType="textPassword"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_changepassword_button"
            android:textSize="20sp"
            app:backgroundTint="@color/dark_blue"
            app:cornerRadius="10dp"/>

    </LinearLayout>

</ScrollView>