<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.LoginFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_Top_Linear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewTitleLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/text_login"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_TitleLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutEmailLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/textInputlayout_width"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            app:boxStrokeColor="@color/light_grey"
            app:errorEnabled="true"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/textViewTitleLogin"
            app:layout_constraintStart_toStartOf="@+id/textViewTitleLogin"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitleLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutPasswordLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/textInputlayout_width"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            app:boxStrokeColor="@color/light_grey"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/inputLayoutEmailLogin"
            app:layout_constraintStart_toStartOf="@+id/inputLayoutEmailLogin"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutEmailLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewPasswordForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/roboto"
            android:padding="5dp"
            android:text="@string/link_forget_password"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/teal"
            android:textSize="@dimen/textsize2"
            app:layout_constraintEnd_toEndOf="@+id/inputLayoutPasswordLogin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/inputLayoutPasswordLogin"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutPasswordLogin" />

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="@dimen/width_Button"
            android:layout_height="@dimen/height_Button"
            android:height="50dp"
            android:text="@string/text_login"
            android:textSize="@dimen/textButton"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="@+id/inputLayoutPasswordLogin"
            app:layout_constraintStart_toStartOf="@+id/inputLayoutPasswordLogin"
            app:layout_constraintTop_toBottomOf="@+id/textViewPasswordForgot" />

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/text_not_register"
            android:textAlignment="center"
            app:boxStrokeColor="@color/light_grey"
            android:textSize="@dimen/textsize1"
            app:layout_constraintEnd_toEndOf="@+id/buttonSend"
            app:layout_constraintStart_toStartOf="@+id/buttonSend"
            app:layout_constraintTop_toBottomOf="@+id/buttonSend" />

        <TextView
            android:id="@+id/textViewRegisterFromLogin"
            android:layout_width="200dp"
            android:layout_height="38dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/link_register"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/teal"
            android:textSize="@dimen/textsize2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewQuestion" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>